# mult-errors

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release-plz.yml  rust.yml
src/: lib.rs
